# TerrainEnginePro

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  COMPLETE_IMPLEMENTATION_GUIDE.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DEVELOPMENT_STATUS.md  FEATURE_ROADMAP.md  INSTALLATION.md  Idea  README.md  REALISTIC_SCOPE.md  SESSION_2_COMPLETE.md  SESSION_3_NODE_GRAPH.md  SESSION_4_EROSION_AND_PRESETS.md  WHATS_WORKING.md
docs/: ARCHITECTURE.md  GPU_PIPELINE_DESIGN.md  IMPLEMENTATION_ROADMAP.md  INSTALLATION.md  NODE_SYSTEM_DESIGN.md  PROGRESS.md  README.md  SESSION_5_TEXTURES.md  SESSION_6_MESH_EXPORT.md  SESSION_7_SERIALIZATION.md  SESSION_8_FILE_DIALOGS.md  SESSION_9_UI_ENHANCEMENTS.md  UI_UX_DESIGN.md  WINDOWS11_OPTIMIZATIONS.md
examples/: 01_simple_perlin.tgraph  02_eroded_mountains.tgraph  03_rocky_peaks.tgraph  README.md
shaders/: hydraulic_erosion.comp  perlin_noise.comp  terrain.frag  terrain.vert
src/: main.cpp
src/Core/: Command.cpp  Command.h  InputManager.h  Logger.h  Types.h
src/Erosion/: HydraulicErosion.cpp  HydraulicErosion.h  ThermalErosion.cpp  ThermalErosion.h
src/GPU/: BufferManager.cpp  BufferManager.h  CommandManager.cpp  CommandManager.h  ComputePipeline.cpp  ComputePipeline.h  VulkanContext.cpp  VulkanContext.h
src/Mesh/: FBXExporter.cpp  FBXExporter.h  Mesh.cpp  Mesh.h  MeshGenerator.cpp  MeshGenerator.h  OBJExporter.cpp  OBJExporter.h
src/Nodes/: ErosionNodes.cpp  ErosionNodes.h  GeneratorNodes.cpp  GeneratorNodes.h  MeshExportNodes.cpp  MeshExportNodes.h  ModifierNodes.cpp  ModifierNodes.h  Node.cpp  Node.h  NodeGraph.cpp  NodeGraph.h  NodeGraphCommands.h  TextureNodes.cpp  TextureNodes.h
src/Rendering/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  TerrainMesh.cpp  TerrainMesh.h
src/Serialization/: GraphSerializer.cpp  GraphSerializer.h
src/Terrain/: Heightfield.cpp  Heightfield.h  TerrainGenerator.cpp  TerrainGenerator.h
src/Texture/: AmbientOcclusionGenerator.cpp  AmbientOcclusionGenerator.h  NormalMapGenerator.cpp  NormalMapGenerator.h  SplatmapGenerator.cpp  SplatmapGenerator.h  Texture.cpp  Texture.h
src/UI/: Application.cpp  Application.h  FileDialog.cpp  FileDialog.h  MountainPresets.cpp  MountainPresets.h  NodeGraphEditor.cpp  NodeGraphEditor.h  StatusBar.cpp  StatusBar.h  TerrainEditor.cpp  TerrainEditor.h  UITheme.cpp  UITheme.h
